# ask-cbioportal

./: .env.example  .gitignore  README.md  pyproject.toml
src/ask_cbioportal/: __init__.py  agent.py  cli.py  config.py  prompts.py
src/ask_cbioportal/backends/: __init__.py  base.py  mcp_clickhouse.py  rest_api.py
src/ask_cbioportal/web/: __init__.py  app.py
src/ask_cbioportal/web/static/: app.js  index.html  styles.css
tests/: __init__.py  test_agent.py  test_backends.py  test_config.py
